[project]
name = "oil-inventory-dashboard"
version = "0.1.0"
description = "Oil markets dashboard — EIA inventories + STEO global S/D + AIS/SAR vessel positions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "xlrd>=2.0",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.28",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "rasterio>=1.3",
    "scipy>=1.11",
    "global-land-mask>=1.0",
    "websockets>=12.0",
    "apscheduler>=3.10",
    # S3-compatible storage backend (MinIO, AWS S3). Optional at runtime —
    # dashboard falls back to local filesystem when S3_BUCKET is unset.
    "s3fs>=2024.1",
    # Browser-fingerprinted HTTP client (curl-impersonate under the hood).
    # Used by pipelines/omr.py to bypass iea.org's Cloudflare bot detection
    # for auto-discovering the latest free OMR PDF URL. Falls back to
    # `requests` if unavailable.
    "curl-cffi>=0.7",
]

[tool.uv]
package = false
